# dvd-rental-system

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/api/: .gitignore  Cargo.toml  Dockerfile
backend/api/src/: handlers.rs  main.rs  models.rs
db/init/: 01_schema.sql
dvd-rental-ui/: package-lock.json  package.json
dvd-rental-ui/src/: App.css  App.tsx
dvd-rental-ui/src-tauri/: Cargo.toml  tauri.conf.json
dvd-rental-ui/src-tauri/src/: main.rs
dvd-rental-ui/src/components/: RentForm.tsx  ReportsView.tsx  ReturnView.tsx
k8s/: namespace.yaml
k8s/backend/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
